--- a/app/views/clients/clients/new.html.erb
+++ b/app/views/clients/clients/new.html.erb
@@ -29,6 +29,9 @@
             <% end %>
           </tbody>
         </table>
+        <div class = "page mt-5">
+          <%= paginate @clients %>
+        </div>
       </div>
     </div>
   </div>
