--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,6 +56,10 @@
     margin-bottom: 20px;
   }
 
+  .button-4 {
+    width: 420px;
+  }
+
   .client-name {
     margin-left: 10px;
     font-family: 'M PLUS Rounded 1c', sans-serif;
