--- a/app/views/admins/blogs/index.html.erb
+++ b/app/views/admins/blogs/index.html.erb
@@ -1,1 +1,69 @@
-<h1>投稿一覧ページ</h1>
+  <h1>投稿一覧ページ</h1>
+  <div class = "container">
+    <div class = "row" >
+      <% @blogs.each do |blog| %>
+        <div class = "card mt-5 mx-5">
+          <div class = "card-header">
+            <div class = "row">
+              <div class = "col-10">
+                <div class = "client-name">
+                  <% if blog.client.profile_image.attached? %>
+                    <%= image_tag blog.client.profile_image.variant(resize: '60x60'), class: "circle" %>
+                  <% else %>
+                    <%= image_tag "no_image.jpg", class: "circle"%>
+                  <% end %>
+                  <%= link_to blog.client.name, admins_client_path(blog.client.id), class: "client-name" %>
+                </div>
+              </div>
+              <div class = "col-2 mt-1">
+                  <%= link_to "強制削除", admins_blog_path(blog.id), method: :delete, data: {confirm: "本当に消しますか？"}, class:"btn btn-outline-danger bottom-right" %>
+              </div>
+            </div>
+          </div>
+
+          <div class = "row">
+            <div class = "col-4">
+              <div class = "card-img-top">
+                <% if blog.images.attached? %>
+                  <%= link_to blog_path(blog.id) do %>
+                    <%= image_tag blog.images[0].variant(resize: '300x400') %>
+                  <% end %>
+                <% end %>
+              </div>
+            </div>
+            <div class = "col-8">
+              <div class = "card-body">
+                <div class = "card-text">
+                  <div class = "blog-text"><%= blog.body %></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class = "card-footer">
+            <div class = "row">
+              <div class = "col-3">
+                <div>
+                  <%= blog.created_at.strftime('%Y/%m/%d') %>
+                </div>
+                <div>
+                  コメント数:&nbsp;<%= blog.blog_comments.count %>件
+                </div>
+                </div>
+                <div class = "col-9 text-right">
+                  <div class = "comment">
+                    <%= form_with model:[blog, @blog_comment],url: blog_blog_comments_path(blog), local: true do |f| %>
+                      <%= f.text_area:comment, placeholder:"コメントを書く", size: "55x0" %>
+                      <%= f.submit "コメント投稿工事中", class: "button btn btn-outline-success" %>
+                    <% end %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+      <div class = "page mt-5">
+        <%= paginate @blogs %>
+      </div>
+    </div>
+  </div>
