--- a/app/views/clients/blogs/show.html.erb
+++ b/app/views/clients/blogs/show.html.erb
@@ -1,42 +1,77 @@
   <div class="container">
     <div class="row">
-      <div class="col-6">
-        <figure>
-          <% if @blog.client.profile_image.attached? %>
-            <%= image_tag @blog.client.profile_image.variant(resize: '70x70'), class: "rounded-circle" %>
-          <% end %>
-          <%= link_to @blog.client.name, client_path(@blog.client.id) %>
-        </figure>
-        <div>
-          <% if @blog.images.attached? %>
-            <%= image_tag @blog.images[0].variant(resize: '300x400') %>
-          <% end %>
-        </div>
-        <div>
-          <%= @blog.body %>
-        </div>
-        <div id = "favorite-btn- <%= @blog.id %>">
-          <%= render "clients/favorites/favorite", blog: @blog %>&nbsp;
-          コメント数:<%= @blog.blog_comments.count %>件
+       <div class = "col-md-7">
+        <div class = "card mt-5">
+          <div class = "card-header">
+            <div class = "client-name">
+              <% if @blog.client.profile_image.attached? %>
+                <%= image_tag @blog.client.profile_image.variant(resize: '60x60'), class: "circle"  %>
+              <% else %>
+                <%= image_tag "no_image.jpg", class: "circle"%>
+              <% end %>
+              <%= link_to @blog.client.name, client_path(@blog.client.id), class: "client-name" %>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col-4">
+              <div class = "card-img-top">
+                <% if @blog.images.attached? %>
+                  <%= link_to blog_path(@blog.id) do %>
+                    <%= image_tag @blog.images[0].variant(resize: '240x300') %>
+                  <% end %>
+                <% end %>
+              </div>
+            </div>
+            <div class = "col-8">
+              <div class = "card-body">
+                <div class = "card-text">
+                  <div class = "blog-text"><%= @blog.body %></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class = "card-footer">
+            <div class = "row">
+              <div class = "col-3">
+                <div>
+                  <%= @blog.created_at.strftime('%Y/%m/%d') %>
+                </div>
+                <div id = "favorite-btn-<%= @blog.id %>">
+                  <%= render "clients/favorites/favorite", blog: @blog %>
+                </div>
+                <div class = "comment-count">
+                  <%= render "clients/blog_comments/comment", blog: @blog %>
+                </div>
+              </div>
+              <div class = "col-9">
+                <div class = "comment">
+                  <%= form_with model:[@blog, @comment],url: blog_blog_comments_path(@blog), local: true do |f| %>
+                    <%= f.text_area:comment, placeholder:"コメントを書く", size: "50x0" %>
+                    <%= f.submit "コメント送信", class: "button-4 btn btn-outline-success" %>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="col-6">
+      <div class="col-5">
         <% @blog.blog_comments.each do |f| %>
           <table class = "table">
-            <tr>
-              <th scope = "col"></th>
-              <th scope = "col"></th>
-            </tr>
-            <tr>
               <td scope = "row">
                 <% if f.client.profile_image.attached? %>
-                  <%= image_tag f.client.profile_image.variant(resize: '70x70'), class: "rounded-circle" %>
+                  <%= image_tag f.client.profile_image.variant(resize: '60x60'), class: "circle" %>
+                <% else %>
+                  <%= image_tag "no_image.jpg", class: "circle"%>
                 <% end %>
                 <%= link_to f.client.name, client_path(f.client.id)%>
               </td>
               <td scope = "row">
                 <%= f.comment%>
+                <% if f.client_id == current_client.id %>
+                  <%= link_to "削除", blog_blog_comment_path(f.blog, f), method: :delete, data: {confirm: "本当に消しますか？"}, class:"btn btn-outline-danger bottom-right" %>
+                <% end %>
               </td>
             </tr>
           </table>
