--- a/app/views/clients/clients/index.html.erb
+++ b/app/views/clients/clients/index.html.erb
@@ -69,6 +69,9 @@
             </div>
           </div>
         <% end %>
+        <div class = "page mt-5">
+          <%= paginate @blogs %>
+        </div>
       </div>
     </div>
   </div>
